--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 before_install:
   - sudo apt-get install libicu-dev
+before_script:
+  - npm install -g grunt-cli
 language: node_js
 node_js:
   - "0.11"
   - "0.10"
   - 0.8
-  - 0.6
