--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "url": "https://github.com/xmpp-ftw/xmpp-ftw-search/issues"
   },
   "dependencies": {
-    "ltx": "*"
+    "ltx": "~0.3.3",
+    "xmpp-ftw": "~1.0.0"
   },
   "devDependencies": {
     "mocha": "~1.8.1",
@@ -39,6 +40,6 @@
     "grunt-contrib-jshint": "~0.7.2"
   },
   "peerDependencies": {
-    "xmpp-ftw": "0.x"
+    "xmpp-ftw": "1.x"
   }
 }
